--- a/admin.html
+++ b/admin.html
@@ -106,6 +106,7 @@
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo", "ASLIN26": "ASLIN26@theo" };
     
     let activeUID = ""; let activeName = ""; let loggedAdminId = ""; let isSuperAdmin = false;
+    let currentLogs = []; // Stores logs globally for CSV download
 
     function handleAdminLogin() {
         const id = document.getElementById('acid').value; const p = document.getElementById('apass').value;
@@ -158,41 +159,19 @@
         });
     }
 
-    async function changeUserRole() { 
-        if(!isSuperAdmin || !activeUID) return; 
-        const newR = document.getElementById('new-role-select').value; 
-        await db.collection("users").doc(activeUID).update({ role: newR }); 
-        alert("Role Updated Successfully!"); 
-    }
-
-    function loadCollegeStudents(cid) { 
-        db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { 
-            const list = document.getElementById('user-folders-list'); list.innerHTML = ""; 
-            snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}", "${u.fullName}", "${u.role}")'>📂 <b>${u.fullName}</b> <small>(${u.role})</small></div>`; }); 
-        }); 
-    }
-
-    async function openReport(uid, name, role) { 
-        activeUID = uid; activeName = name; 
-        document.getElementById('user-modal').classList.remove('hidden'); 
-        document.getElementById('modal-title').innerText = name; 
-        if(isSuperAdmin) {
-            document.getElementById('super-role-box').classList.remove('hidden');
-            document.getElementById('new-role-select').value = role || 'student';
-        }
-        fetchUsageData(); 
-    }
-
     async function fetchUsageData() {
         const body = document.getElementById('log-body'); body.innerHTML = "<tr><td colspan='4'>Syncing...</td></tr>";
         try {
-            const snap = await db.collection("activity_logs").where("userId", "==", activeUID).limit(200).get();
-            let logs = []; snap.forEach(d => logs.push(d.data()));
-            logs.sort((a, b) => (b.startTime || 0) - (a.startTime || 0));
+            const snap = await db.collection("activity_logs").where("userId", "==", activeUID).limit(300).get();
+            currentLogs = []; snap.forEach(d => currentLogs.push(d.data()));
+            currentLogs.sort((a, b) => (b.startTime || 0) - (a.startTime || 0));
+            
             let t = 0, o = 0, b = 0, html = "";
-            logs.forEach(d => { 
+            currentLogs.forEach(d => { 
                 const start = d.startTime || 0, end = d.endTime || 0, dur = end ? Math.floor((end - start) / 1000) : 0;
-                if(d.type && d.type.includes("Usage")) t += dur; if(d.type && d.type.includes("Online")) o += dur; if(d.type && d.type.includes("Borrowed")) b += dur;
+                if(d.type && d.type.includes("Usage")) t += dur; 
+                if(d.type && d.type.includes("Online")) o += dur; 
+                if(d.type && d.type.includes("Borrowed")) b += dur;
                 html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${start ? new Date(start).toLocaleTimeString() : '--'}</td><td>${end ? new Date(end).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
             });
             document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Full Read<br><b>${fmt(b)}</b></div></div>`;
@@ -200,6 +179,23 @@
         } catch (err) { body.innerHTML = "<tr><td colspan='4'>Error fetching data.</td></tr>"; }
     }
 
+    async function downloadCSV() {
+        if (currentLogs.length === 0) { alert("No logs to download. Please Sync first."); return; }
+        let rows = "Activity,Start Date,Start Time,End Time,Duration\n";
+        currentLogs.forEach(d => { 
+            const start = d.startTime ? new Date(d.startTime) : null;
+            const end = d.endTime ? new Date(d.endTime) : null;
+            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            rows += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`; 
+        });
+        const blob = new Blob([rows], { type: 'text/csv' });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(blob);
+        a.download = `${activeName}_TheoLib_Report.csv`; a.click();
+    }
+
+    async function changeUserRole() { if(!isSuperAdmin || !activeUID) return; const newR = document.getElementById('new-role-select').value; await db.collection("users").doc(activeUID).update({ role: newR }); alert("Role Updated!"); }
+    function loadCollegeStudents(cid) { db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { const list = document.getElementById('user-folders-list'); list.innerHTML = ""; snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}", "${u.fullName}", "${u.role}")'>📂 <b>${u.fullName}</b> <small>(${u.role})</small></div>`; }); }); }
+    async function openReport(uid, name, role) { activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; if(isSuperAdmin) document.getElementById('new-role-select').value = role || 'student'; fetchUsageData(); }
     function fmt(s) { if(isNaN(s) || s <= 0) return "00:00:00"; const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
     function closeModal() { document.getElementById('user-modal').classList.add('hidden'); document.getElementById('super-role-box').classList.add('hidden'); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
